--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=BioRhyme&amp;family=Space+Mono&amp;display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <title>Ceep</title>
@@ -17,6 +17,7 @@
       
       <form class="form" action="">
         <input class="form-input" type="text" data-form-input>
+        <input type="datetime-local" date-form-input>
         <button class="form-button" data-form-button> Novo Item </button>
       </form>
 
