--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       
       <form class="form" action="">
         <input class="form-input" type="text" data-form-input>
-        <input type="datetime-local" date-form-input>
+
+        <input type="datetime-local" placeholder="preencha 2022-10-02" data-form-date>
         <button class="form-button" data-form-button> Novo Item </button>
       </form>
 
@@ -26,6 +27,7 @@
       </ul>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <script type="module" src="main.js"></script>
 </body>
 </html>
